<resources>
    <string name="app_name">Art Call</string>
    <string name="hello">Добро пожаловать!</string>
    <string name="Socrates">"Невозможно жить лучше, чем проводя жизнь в стремлении стать совершеннее"</string>
    <string name="author_Socrates">Сократ</string>
    <string name="authorization">Авторизуйтесь, пожалуйста, через приложение ВКонтакте!</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="log_in">Войти в аккаунт</string>
    <string name="check_in">Зарегистрироваться</string>
    <string name="Folkner">"Всегда мечтайте и стремитесь к большему, чем вы знаете, что можете достигнуть. Не трудитесь быть лучше своих предшественников или современников. Старайтесь быть лучше самих себя"
    </string>
    <string name="confirm_address">Подтверждение</string>
    <string name="check_address">Проверка адреса</string>
    <string name="address_not_exist">Адрес не существует</string>
    <string name="enable_gps">Включите GPS</string>
    <string name="loading">Пожалуйста подождите</string>
    <string name="author_Folkner">Уильям Фолкнер</string>

    <string name="form">Введите город проживания</string>
    <string name="name">Имя</string>
    <string name="save">Сохранить</string>
    <string name="city">Город проживания</string>
    <string name="fact">Факт дня</string>
    <string name="task_for_today">ЗАДАНИЕ НА СЕГОДНЯ</string>
    <string name="task_from">Задание от </string>
    <string name="deadline">Срок выполнения задания:</string>
    <string name="complexity">СЛОЖНОСТЬ</string>
    <string name="level">Уровень: </string>
    <string name="send">Отправить </string>
    <string name="your_task">Ваше задание </string>
    <string name="string">Запомните самое главное: процесс самосовершенствования не должен прерываться никогда, ему нет начала и нет конца.</string>
    <string name="attainment">Достижения</string>
    <string name="coins">Монет:</string>
    <string name="challenge">Вы готовы принять вызов?</string>
    <string name="done">Завершить?</string>
    <string name="art">Art Call</string>
    <string name="your_city">Введите город</string>
    <string name="your_address">Введите адрес</string>
    <string name="name_task">Введите название</string>
    <integer name="com_vk_sdk_AppId">6109909</integer>
    <string name="choose_date">Выберите дату</string>
    <string name="ready">Готово</string>
    <string name="text_of_fact">По утверждению Казимира Малевича, он писал картину Черный Квадрат несколько месяцев. По одной из версий, художник не смог закончить работу над картиной в нужный срок, поэтому ему пришлось замазать работу черной краской.</string>


</resources>
