<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/hello"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <TextView
            android:layout_weight="2"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/Socrates"
                android:gravity="right"
                android:textSize="17sp"
                android:textColor="@color/colorText"
                android:textStyle="italic"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author_Socrates"
                android:fontFamily="sans-serif-condensed"
                android:gravity="right"
                android:textColor="@color/colorText"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

    </LinearLayout>
    </LinearLayout>
    </LinearLayout>


    <TextView
        android:background="@drawable/btn_profile"
        android:layout_width="match_parent"
        android:alpha="0.7"
        android:layout_height="wrap_content"
        android:text="@string/authorization"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/colorTextWhite"
        android:textStyle="bold"
        android:layout_marginRight="55dp"
        android:layout_marginLeft="55dp"
        android:gravity="center"
        android:textSize="25sp"
        />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">


        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_enter"
                    android:background="@drawable/btn"
                    android:layout_width="170dp"
                    android:layout_height="50dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/log_in"
                    android:textColor="@color/colorTextWhite"
                    android:layout_marginBottom="5dp"
                    android:textSize="20sp"
                    android:alpha="0.7"/>




            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



