<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context="com.kpfu.itis.culturalchallenge.splash.SplashActivity">


    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/progress"
        android:max="100"
        android:progress="1"
        android:indeterminate="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"/>

    <TextView
        android:id="@+id/string"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"
        android:text="@string/string"
        android:textAllCaps="false"

        android:gravity="center"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        />


    <TextView
        android:id="@+id/tv_splash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_splash_2"
        android:text="@string/art"
        android:textAllCaps="false"
        android:gravity="center"
        android:textColor="@color/colorText"
        android:textSize="40sp"
        />


    <TextView
        android:id="@+id/tv_splash_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/progress"
        android:text="@string/hello"
        android:textAllCaps="false"
        android:gravity="center"
        android:textColor="@color/colorTextWhite"
        android:textSize="40sp"
        />
</RelativeLayout>


