<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textColor="@color/colorText"
            android:text="@string/level"/>
        <TextView
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textColor="@color/colorText"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:fontFamily="sans-serif-condensed"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="18sp"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/samorazvitiye"
        android:layout_gravity="center"
        android:alpha="0.8"

        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_margin="7dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="@color/colorBack"
                >

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorText"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="15sp"
                        android:layout_margin="10dp"
                        android:hint="@string/your_task"
                        />
                </ScrollView>

            </android.support.v7.widget.CardView>

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_profile"
                android:fontFamily="sans-serif-condensed"
                android:alpha="0.6"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/send"
                android:textColor="@color/colorTextWhite"
                android:textAllCaps="true"
                />



        </LinearLayout>
    </ScrollView>
</LinearLayout>