<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:gravity="right"
            android:textColor="@color/colorText"
            />
        <Button
            android:id="@+id/btn_add_task"
            android:text="Add Task"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:fontFamily="sans-serif-condensed"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/samorazvitiye"
        android:layout_gravity="center"
        android:alpha="0.8"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView

            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/level"/>

        <TextView
            android:id="@+id/profile_level"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/colorText"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:text="@string/coins"/>

        <TextView
            android:id="@+id/profile_coins"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            />

    </LinearLayout>

    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/colorText"
        android:textAllCaps="true"
        android:text="@string/attainment"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_profile_achivements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>




</LinearLayout>